--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -97,3 +97,47 @@
     }
     
 }
+
+
+/* for file/edit and folder/edit only: */
+@media screen and (max-width: 800px) {
+    /* mobile view: */
+    #file_aside, #folder_aside {
+        display: block;
+        
+        img {
+            width: 30%;
+            height: 100%;
+            max-height: 10em;
+            float:left;
+            margin-right: 1em;
+        }
+        h3 {
+            text-align: center; font-size: 140%;
+        }
+        
+        dl {
+            display: table;
+        }
+    }
+}
+
+@media screen and (min-width: 801px) {
+    /* desktop view: */
+    #file_aside, #folder_aside {
+        float: left;
+        width: 20%;
+        
+        img {
+            margin-top: 15%;
+            margin-left: 20%;
+            width: 60%;
+            max-height: 16em;
+            height: 100%;
+        }
+        
+        h3 {
+            text-align: center; font-size: 140%;
+        }
+    }
+}
