--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5839,6 +5839,52 @@ table.dates .draggable-topic-handle {
 .folder_type_select_possibilities input[name=folder_type]:checked + label img {
   filter: invert(100%) brightness(200%);
 }
+/* for file/edit and folder/edit only: */
+@media screen and (max-width: 800px) {
+  /* mobile view: */
+  #file_aside,
+  #folder_aside {
+    display: block;
+  }
+  #file_aside img,
+  #folder_aside img {
+    width: 30%;
+    height: 100%;
+    max-height: 10em;
+    float: left;
+    margin-right: 1em;
+  }
+  #file_aside h3,
+  #folder_aside h3 {
+    text-align: center;
+    font-size: 140%;
+  }
+  #file_aside dl,
+  #folder_aside dl {
+    display: table;
+  }
+}
+@media screen and (min-width: 801px) {
+  /* desktop view: */
+  #file_aside,
+  #folder_aside {
+    float: left;
+    width: 20%;
+  }
+  #file_aside img,
+  #folder_aside img {
+    margin-top: 15%;
+    margin-left: 20%;
+    width: 60%;
+    max-height: 16em;
+    height: 100%;
+  }
+  #file_aside h3,
+  #folder_aside h3 {
+    text-align: center;
+    font-size: 140%;
+  }
+}
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
 .eval_title {
   font-size: 1.2em;
