--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -155,9 +155,8 @@ td.tree-elbow-line, td.tree-elbow-end {
 
 /* --- Table details -------------------------------------------------------- */
 .loaded-details {
-    > td { padding: 0 20px 5px 20px !important; }
+    > td { padding: 0 0 5px 20px !important; }
     table {
-        border: 1px solid #888;
         border-top: 0;
     }
 }
@@ -423,6 +422,8 @@ table.default {
                 cursor: move;
             }
         }
+    }
+    > tbody:last-of-type {
         > tr:last-child > td {
             border-bottom: 1px solid @brand-color-darker;
         }
