MOADB: Improved style for file/edit and folder/edit view for mobile

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -112,14 +112,23 @@
             float:left;
             margin-right: 1em;
         }
+        
         h3 {
-            text-align: center; font-size: 140%;
+            text-align: center;
+            font-size: 140%;
+            padding-top: 1em;
         }
         
         dl {
             display: table;
         }
     }
+    
+    #file_management_forms {
+        display: table;
+        width: 100%;
+    }
+    
 }
 
 @media screen and (min-width: 801px) {
@@ -137,7 +146,13 @@
         }
         
         h3 {
-            text-align: center; font-size: 140%;
+            text-align: center;
+            font-size: 140%;
         }
+    }
+    
+    #file_management_forms {
+        display: table;
+        width: 79%;
     }
 }
