--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -54,32 +54,28 @@ form.default {
         }
     }
 
-    label.col-4 {
+    // TODO: How is 15% percent related to anything column-wise?
+    label.col-2, label.col-3, label.col-4 {
+        .flex-align-self(flex-end);
         display: inline-block;
-        min-width: 60%;
         padding-right: 1em;
-        vertical-align: bottom;
     }
-
-    label.col-3 {
-        display: inline-block;
-        min-width: 45%;
-        padding-right: 1em;
-        vertical-align: bottom;
-    }
-
     label.col-2 {
-        display: inline-block;
-        min-width: 30%;
-        padding-right: 1em;
-        vertical-align: bottom;
+        .flex-item(1, 0, 30%);
+    }
+    label.col-3 {
+        .flex-item(1, 0, 45%);
+    }
+    label.col-4 {
+        .flex-item(1, 0, 60%);
     }
 
     fieldset {
         .box-sizing(border-box);
         .flex();
-        .flex-direction-column();
+        .flex-direction-row();
         .flex-wrap(wrap);
+        .flex-justify-content(space-between);
 
         border: solid 1px @content-color-40;
         margin: 0 0 10px;
@@ -106,6 +102,10 @@ form.default {
 
         > :first-child:not(legend), > legend + * {
             margin-top: 10px;
+        }
+        
+        > * {
+            .flex-item(1, 0, 100%);
         }
     }
 
@@ -153,7 +153,7 @@ form.default {
     // Group elements in a row
     .hgroup {
         .flex();
-        .flex-align-items(flex-start);
+        .flex-align-items(flex-end);
         max-width: @max-width-m;
 
         &.size-s {
