--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -436,6 +436,13 @@ table.default {
             }
         }
     }
+    > tbody > tr.new > td {
+        font-weight: bold;
+        &:first-child {
+            padding-left: 2px;
+            border-left: 2px solid @red;
+        }
+    }
     > tbody:last-of-type > tr:last-child > td {
         border-bottom: 1px solid @brand-color-darker;
     }
