--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -56,26 +56,26 @@ form.default {
 
     // TODO: How is 15% percent related to anything column-wise?
     label.col-2, label.col-3, label.col-4 {
-        .flex-align-self(flex-end);
+//        .flex-align-self(flex-end);
         display: inline-block;
         padding-right: 1em;
+        vertical-align: bottom;
     }
     label.col-2 {
-        .flex-item(1, 0, 30%);
+//        flex: 1 0 30%;
+        min-width: 30%;
     }
     label.col-3 {
-        .flex-item(1, 0, 45%);
+//        flex: 1 0 45%;
+        min-width: 45%;
     }
     label.col-4 {
-        .flex-item(1, 0, 60%);
+//        flex: 1 0 60%;
+        min-width: 60%;
     }
 
     fieldset {
-        .box-sizing(border-box);
-        .flex();
-        .flex-direction-row();
-        .flex-wrap(wrap);
-        .flex-justify-content(space-between);
+        box-sizing: border-box;
 
         border: solid 1px @content-color-40;
         margin: 0 0 10px;
@@ -86,7 +86,7 @@ form.default {
         break-before: column;
 
         > legend {
-            .box-sizing(border-box);
+            box-sizing: border-box;
             background-color: @fieldset-header;
             border: 1px solid @content-color-40;
             border-bottom: 0;
@@ -102,10 +102,6 @@ form.default {
 
         > :first-child:not(legend), > legend + * {
             margin-top: 10px;
-        }
-        
-        > * {
-            .flex-item(1, 0, 100%);
         }
     }
 
