--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -1110,54 +1110,21 @@ form.default label:not(.undecorated) select {
 form.default label.col-2,
 form.default label.col-3,
 form.default label.col-4 {
-  -webkit-align-self: flex-end;
-  -ms-align-self: flex-end;
-  align-self: flex-end;
   display: inline-block;
   padding-right: 1em;
+  vertical-align: bottom;
 }
 form.default label.col-2 {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 30%;
-  -ms-flex: 1 0 30%;
-  -moz-box-flex: 1;
-  flex: 1 0 30%;
+  min-width: 30%;
 }
 form.default label.col-3 {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 45%;
-  -ms-flex: 1 0 45%;
-  -moz-box-flex: 1;
-  flex: 1 0 45%;
+  min-width: 45%;
 }
 form.default label.col-4 {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 60%;
-  -ms-flex: 1 0 60%;
-  -moz-box-flex: 1;
-  flex: 1 0 60%;
+  min-width: 60%;
 }
 form.default fieldset {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: -webkit-box-flex;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  -moz-box-direction: normal;
-  -moz-box-orient: horizontal;
-  -webkit-box-orient: horizontal;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
   border: solid 1px #d0d7e3;
   margin: 0 0 10px;
   padding: 10px;
@@ -1166,8 +1133,6 @@ form.default fieldset {
   break-before: column;
 }
 form.default fieldset > legend {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   background-color: #e7ebf1;
   border: 1px solid #d0d7e3;
@@ -1184,13 +1149,6 @@ form.default fieldset > legend {
 form.default fieldset > :first-child:not(legend),
 form.default fieldset > legend + * {
   margin-top: 10px;
-}
-form.default fieldset > * {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 100%;
-  -ms-flex: 1 0 100%;
-  -moz-box-flex: 1;
-  flex: 1 0 100%;
 }
 form.default .required {
   font-weight: bold;
