--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -11,7 +11,7 @@
 }
 
 /* for file/edit view and file/new_edit_folder_form view: */
-.file_select_possibilities, .folder_type_select_possibilities {
+div.file_select_possibilities, .folder_type_select_possibilities {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -50,8 +50,10 @@
     }
     
     
-    label {
-        font-size:70%;
+    > label:not(.undecorated) {
+        display: flex;
+        justify-content: center;
+        font-size:0.7em;
         
         img {
             width:40%;
@@ -64,9 +66,7 @@
     /* for file/edit view only: */
     
     input[name=content_terms_of_use_id] {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
+        display: none;
     }
     
     input[name=content_terms_of_use_id]:checked + label {
@@ -131,11 +131,19 @@
     
 }
 
+#file_edit_window {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
 @media screen and (min-width: 801px) {
     /* desktop view: */
     #file_aside, #folder_aside {
-        float: left;
-        width: 20%;
+        width: calc(30% - 10px);
+        max-width: calc(30% - 10px);
+        overflow: hidden;
         
         img {
             margin-top: 15%;
@@ -147,12 +155,12 @@
         
         h3 {
             text-align: center;
-            font-size: 140%;
+            font-size: 1.1em;
         }
     }
     
     #file_management_forms {
-        display: table;
-        width: 79%;
+        width: calc(70% - 10px);
+        max-width: calc(70% - 10px);
     }
 }
