--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5762,7 +5762,7 @@ table.dates .draggable-topic-handle {
   border: #28497c solid 1px;
 }
 /* for file/edit view and file/new_edit_folder_form view: */
-.file_select_possibilities,
+div.file_select_possibilities,
 .folder_type_select_possibilities {
   display: flex;
   flex-wrap: wrap;
@@ -5771,7 +5771,7 @@ table.dates .draggable-topic-handle {
   /* for file/edit view only: */
   /* for file/new_edit_folder_form view only: */
 }
-.file_select_possibilities > *,
+div.file_select_possibilities > *,
 .folder_type_select_possibilities > * {
   background-color: transparent;
   margin: 10px;
@@ -5790,12 +5790,12 @@ table.dates .draggable-topic-handle {
   align-items: center;
   text-align: center;
 }
-.file_select_possibilities > * > img,
+div.file_select_possibilities > * > img,
 .folder_type_select_possibilities > * > img {
   margin-left: auto;
   margin-right: auto;
 }
-.file_select_possibilities > button,
+div.file_select_possibilities > button,
 .folder_type_select_possibilities > button {
   cursor: pointer;
   width: 140px;
@@ -5806,43 +5806,43 @@ table.dates .draggable-topic-handle {
   max-height: 140px;
   color: #28497c;
 }
-.file_select_possibilities label,
-.folder_type_select_possibilities label {
-  font-size: 70%;
+div.file_select_possibilities > label:not(.undecorated),
+.folder_type_select_possibilities > label:not(.undecorated) {
+  display: flex;
+  justify-content: center;
+  font-size: 0.7em;
 }
-.file_select_possibilities label img,
-.folder_type_select_possibilities label img {
+div.file_select_possibilities > label:not(.undecorated) img,
+.folder_type_select_possibilities > label:not(.undecorated) img {
   width: 40%;
   height: 40%;
   display: block;
 }
-.file_select_possibilities input[name=content_terms_of_use_id],
+div.file_select_possibilities input[name=content_terms_of_use_id],
 .folder_type_select_possibilities input[name=content_terms_of_use_id] {
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
+  display: none;
 }
-.file_select_possibilities input[name=content_terms_of_use_id]:checked + label,
+div.file_select_possibilities input[name=content_terms_of_use_id]:checked + label,
 .folder_type_select_possibilities input[name=content_terms_of_use_id]:checked + label {
   background-color: #1f4171;
   color: #ffffff;
 }
-.file_select_possibilities input[name=content_terms_of_use_id]:checked + label img,
+div.file_select_possibilities input[name=content_terms_of_use_id]:checked + label img,
 .folder_type_select_possibilities input[name=content_terms_of_use_id]:checked + label img {
   filter: invert(100%) brightness(200%);
 }
-.file_select_possibilities input[name=folder_type],
+div.file_select_possibilities input[name=folder_type],
 .folder_type_select_possibilities input[name=folder_type] {
   position: absolute;
   top: -9999px;
   left: -9999px;
 }
-.file_select_possibilities input[name=folder_type]:checked + label,
+div.file_select_possibilities input[name=folder_type]:checked + label,
 .folder_type_select_possibilities input[name=folder_type]:checked + label {
   background-color: #1f4171;
   color: #ffffff;
 }
-.file_select_possibilities input[name=folder_type]:checked + label img,
+div.file_select_possibilities input[name=folder_type]:checked + label img,
 .folder_type_select_possibilities input[name=folder_type]:checked + label img {
   filter: invert(100%) brightness(200%);
 }
@@ -5876,12 +5876,19 @@ table.dates .draggable-topic-handle {
     width: 100%;
   }
 }
+#file_edit_window {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
+}
 @media screen and (min-width: 801px) {
   /* desktop view: */
   #file_aside,
   #folder_aside {
-    float: left;
-    width: 20%;
+    width: calc(30% - 10px);
+    max-width: calc(30% - 10px);
+    overflow: hidden;
   }
   #file_aside img,
   #folder_aside img {
@@ -5894,11 +5901,11 @@ table.dates .draggable-topic-handle {
   #file_aside h3,
   #folder_aside h3 {
     text-align: center;
-    font-size: 140%;
+    font-size: 1.1em;
   }
   #file_management_forms {
-    display: table;
-    width: 79%;
+    width: calc(70% - 10px);
+    max-width: calc(70% - 10px);
   }
 }
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
