--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5833,9 +5833,7 @@ div.file_select_possibilities input[name=content_terms_of_use_id]:checked + labe
 }
 div.file_select_possibilities input[name=folder_type],
 .folder_type_select_possibilities input[name=folder_type] {
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
+  display: none;
 }
 div.file_select_possibilities input[name=folder_type]:checked + label,
 .folder_type_select_possibilities input[name=folder_type]:checked + label {
@@ -5906,6 +5904,20 @@ div.file_select_possibilities input[name=folder_type]:checked + label img,
   #file_management_forms {
     width: calc(70% - 10px);
     max-width: calc(70% - 10px);
+  }
+}
+@media screen and (max-width: 800px) {
+  #file_edit_window {
+    flex-direction: column;
+  }
+  #file_aside,
+  #folder_aside {
+    width: 100%;
+    max-width: none;
+  }
+  #file_management_forms {
+    width: 100%;
+    max-width: none;
   }
 }
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
