--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -10,6 +10,13 @@
     border: @base-color solid 1px;
 }
 
+.subfolders .empty {
+    display: none;
+    &:only-child {
+        display: table-row;
+    }
+}
+
 /* for file/edit view and file/new_edit_folder_form view: */
 div.file_select_possibilities, .folder_type_select_possibilities {
     display: flex;
@@ -54,6 +61,7 @@ div.file_select_possibilities, .folder_type_select_possibilities {
         display: flex;
         justify-content: center;
         font-size:0.7em;
+        cursor: pointer;
         
         img {
             width:40%;
@@ -72,7 +80,7 @@ div.file_select_possibilities, .folder_type_select_possibilities {
     input[name=content_terms_of_use_id]:checked + label {
         background-color: @brand-color-darker;
         color: @contrast-content-white;
-        
+
         img {
             filter: invert(100%) brightness(200%);
         }
