--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -104,6 +104,21 @@ div.file_select_possibilities, .folder_type_select_possibilities {
     
 }
 
+input.document-checkbox[type="checkbox"] {
+    display:none;
+}
+input.document-checkbox[type="checkbox"] + label span {
+    display:inline-block;
+    width:16px;
+    height:16px;
+    margin:0px 0px 0 0;
+    vertical-align:middle;
+    .background-icon("checkbox-unchecked", 'clickable');
+    cursor:pointer;
+}
+input.document-checkbox[type="checkbox"]:checked + label span {
+    .background-icon("checkbox-checked", 'clickable');
+}
 
 /* for file/edit and folder/edit only: */
 @media screen and (max-width: 800px) {
