--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -439,7 +439,7 @@ table.default {
     > tbody > tr.new > td {
         font-weight: bold;
         &:first-child {
-            padding-left: 2px;
+            margin-left: 2px;
             border-left: 2px solid @red;
         }
     }
