--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -121,6 +121,10 @@ input.document-checkbox[type="checkbox"]:checked + label span {
     .icon('after', "checkbox-checked", 'clickable', 16, 4);
 }
 
+input.document-checkbox[type="checkbox"]:indeterminate + label span {
+    .icon('after', "checkbox-indeterminate", 'clickable', 16, 4);
+}
+
 /* for file/edit and folder/edit only: */
 @media screen and (max-width: 800px) {
     /* mobile view: */
