--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5888,6 +5888,20 @@ input.document-checkbox[type="checkbox"]:checked + label span::after {
   vertical-align: text-top;
   width: 16px;
 }
+input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
+  background-repeat: no-repeat;
+  content: ' ';
+  display: inline-block;
+  height: 16px;
+  margin-left: 4;
+  background-image: url("../images/icons/blue/checkbox-indeterminate.svg");
+  -webkit-background-size: 16px 16px;
+  -moz-background-size: 16px 16px;
+  -o-background-size: 16px 16px;
+  background-size: 16px 16px;
+  vertical-align: text-top;
+  width: 16px;
+}
 /* for file/edit and folder/edit only: */
 @media screen and (max-width: 800px) {
   /* mobile view: */
