more responsive design on several pages, refs#7068

--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -94,6 +94,10 @@ a.button, button.button {
   .button-with-icon("arr_1down", "clickable", "info_alt");
 }
 
+.button.add {
+  .button-with-icon("add", "clickable", "info_alt");
+}
+
 /* Grouped Buttons */
 .button-group {
     display: inline-block;
