--- a/public/assets/stylesheets/less/studygroup.less
+++ b/public/assets/stylesheets/less/studygroup.less
@@ -37,3 +37,13 @@ ul.studygroup-gallery {
         white-space: nowrap;
     }
 }
+
+.studygroup-browse {
+  td:nth-child(2) {
+    a {
+      display: block;
+      max-width: 40em;
+      min-width: 15em;
+    }
+  }
+}
