--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -7,7 +7,9 @@
 
 @import "less/font-face-lato.less";
 @import "less/variables.less";
+@import "less/breakpoints.less";
 @import "less/typography.less";
+@import "less/visibility.less";
 @import "less/links.less";
 @import "less/tables.less";
 @import "less/forms.less";
