--- a/public/plugins_packages/core/Blubber/assets/stylesheets/blubber.less
+++ b/public/plugins_packages/core/Blubber/assets/stylesheets/blubber.less
@@ -335,7 +335,7 @@
 #blubber_threads.singlethread .posting > .content_column img, #blubber_threads.singlethread  .posting > .content_column video {
     //max-width: 750px;
 }
-@media screen and (max-width: @small-screen-width) {
+@media screen and (max-width: @major-breakpoint-medium) {
     #blubber_threads .posting > .content_column img, #blubber_threads .posting > .content_column video {
         max-width: ~"calc(100vw - 127px)";
     }
