--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -1,4 +1,6 @@
-@small-screen-width: 800px;
+@import (reference) "breakpoints.less";
+@import (reference) "visibility.less";
+
 @header-bar-container-height: 35px;
 
 @responsive-menu-width: 270px;
@@ -148,17 +150,20 @@ label[for="responsive-toggle"] {
 }
 
 
-@media screen and (min-width: @small-screen-width) {
+/* @deprecated use .hidden-medium-up */
+.media-breakpoint-medium-up({
     .responsive-visible {
         display: none;
     }
-}
+});
 
-@media screen and (max-width: @small-screen-width) {
+.media-breakpoint-small-down({
     #header, #barTopFont, #barTopMenu, #barBottomLeft .current_page, #barBottommiddle, #barBottomLeft, #barBottomArrow,
     #tabs, .sidebar-image, #sidebar-navigation, #quicksearch, #layout_footer, li#quicksearch_item {
         display: none !important;
     }
+
+    /* @deprecated use .hidden-small-down */
     .responsive-hidden {
         display: none;
     }
@@ -286,4 +291,4 @@ label[for="responsive-toggle"] {
             margin-right: 0;
         }
     }
-}
+});
