use more CSS classes, extract template partials, refs #7068

--- a/public/assets/stylesheets/less/profile.less
+++ b/public/assets/stylesheets/less/profile.less
@@ -92,7 +92,7 @@ form.settings-avatar {
             }
 
             &:before {
-                content: attr(data-label) ": ";
+                content: attr(data-label);
                 font-weight: bold;
                 width: 6.5em;
                 display: inline-block;
