--- a/public/assets/stylesheets/less/studygroup.less
+++ b/public/assets/stylesheets/less/studygroup.less
@@ -39,7 +39,7 @@ ul.studygroup-gallery {
 }
 
 .studygroup-browse {
-  td:nth-child(2) {
+  td.studygroup-title {
     a {
       display: block;
       max-width: 40em;
