--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5931,15 +5931,19 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
     display: table;
     width: 100%;
   }
-}
-#file_edit_window {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  align-content: flex-start;
+  .file_preview {
+    max-width: 100%;
+  }
 }
 @media screen and (min-width: 801px) {
   /* desktop view: */
+  #file_edit_window,
+  #file_details_window {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+  }
   #file_aside,
   #folder_aside {
     width: calc(30% - 10px);
@@ -5959,9 +5963,14 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
     text-align: center;
     font-size: 1.1em;
   }
-  #file_management_forms {
+  #file_management_forms,
+  #preview_container {
     width: calc(70% - 10px);
     max-width: calc(70% - 10px);
+  }
+  #file_management_forms .file_preview,
+  #preview_container .file_preview {
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 800px) {
