i18n: reorder elements in 18n_group so that the actual input element is the first element and will be associated with a surrounding label, fixes #7172

--- a/public/assets/stylesheets/less/i18n.less
+++ b/public/assets/stylesheets/less/i18n.less
@@ -34,7 +34,7 @@ select.i18n {
 
     position: relative;
 
-    > select:first-child {
+    > select:last-child {
         border: 0;
         border-right: 1px solid @light-gray-color-40;
         border-radius: 0;
@@ -55,7 +55,7 @@ select.i18n {
     }
 
     &.normal-input {
-        > select:first-child {
+        > select:last-child {
             bottom: 1px;
         }
 
@@ -65,7 +65,7 @@ select.i18n {
 
     }
     &.textarea-input {
-        > select:first-child {
+        > select:last-child {
             border-bottom: 1px solid @light-gray-color-40;
         }
 
