fixes 7077, convert input[type=image] to button, if formaction is set

--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -112,3 +112,10 @@ a.button, button.button {
         margin-right: 0;
     }
 }
+
+.button-icon {
+    border: none;
+    background-color: transparent;
+    padding: 0px;
+    cursor: pointer;
+}
