--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -36,6 +36,7 @@
 @import "less/messagebox.less";
 @import "less/messages.less";
 @import "less/quicksearch.less";
+@import "less/search.less";
 @import "less/skiplinks.less";
 @import "less/tabs.less";
 @import "less/tooltip.less";
