add missing search.less and adjust that to stud.ip color scheme, re #7193

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4402,20 +4402,7 @@ input.quicksearchbox {
 }
 #institute_result {
   background: #e7ebf1;
-  border-top: 1px solid #1f4171;
-  padding: 10px;
-  margin-top: 15px;
-  width: 100%;
-}
-#institute_tree {
-  margin-top: 15px;
-}
-#institute_tree table td.printcontent {
-  padding: 0 10px 20px 10px;
-}
-#institute_result {
-  background: #e7ebf1;
-  border-top: 1px solid #1f4171;
+  border-top: 1px solid #28497c;
   padding: 10px;
   width: 100%;
 }
