calendar: fix table width, fixes #7290

--- a/public/assets/stylesheets/less/calendar.less
+++ b/public/assets/stylesheets/less/calendar.less
@@ -102,8 +102,7 @@ td.current {
 table.calendar-week, table.calendar-day {
     border-spacing: 0;
     table-layout: fixed;
-    width: 100%;  
-    & td {
+    td {
         padding: 0;
     }
 }
@@ -148,10 +147,6 @@ table.calendar-month td.calendar-month-week {
 
 td.weekdayevents {
     width: 90px;
-}
-
-table.calendar-week {
-    width: 100%;
 }
 
 nav.calendar-nav {
