--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -60,6 +60,7 @@
 @import "less/statusgroups.less";
 @import "less/start.less";
 @import "less/profile.less";
+@import "less/my_courses.less";
 
 @import "less/mobile.less";
 @import "less/pagination.less";
