MOADB: added _terms_of_use_select view for file controller

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -64,6 +64,23 @@ div.file_select_possibilities, .folder_type_select_possibilities {
             margin-right: auto;
         }
     }
+    
+    > label.content_terms_of_use_entry
+    {
+        width: 40px;
+        min-width: 40px;
+        max-width: 40px;
+        height: 40px;
+        min-height: 40px;
+        max-height: 40px;
+        
+        img {
+            width:100%;
+            height:100%;
+            display:block;
+        }
+    }
+    
     > button {
         cursor: pointer;
         width: 140px;
