--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -65,7 +65,7 @@ div.file_select_possibilities, .folder_type_select_possibilities {
         }
     }
     
-    > label.content_terms_of_use_entry
+    > label.content_terms_of_use_entry:not(.undecorated)
     {
         width: 40px;
         min-width: 40px;
