MOADB: Made icons left aligned in terms of use selection section

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -140,6 +140,11 @@ div.file_select_possibilities, .folder_type_select_possibilities {
     
 }
 
+div.file_select_possibilities.content_terms_of_use_icons {
+    justify-content: left;
+}
+
+
 input.document-checkbox[type="checkbox"] {
     display:none;
 }
