--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -65,6 +65,7 @@
         .ui-dialog-buttonset {
             text-align: center;
             float: none;
+            white-space: nowrap;
         }
         .ui-button {
             .button(); // Include button mixin
@@ -108,8 +109,14 @@
     top: 50%;
     right: 34px; // This is ugly but hard to avoid since the close button's position on a dialog is also hardcoded
 }
-.ui-dialog .ui-dialog-title {
-    margin-right: 48px; // Needs to be adjusted to the width of wiki icon
+.ui-dialog {
+    .ui-dialog-title {
+        margin-right: 48px; // Needs to be adjusted to the width of wiki icon
+    }
+    .with-wiki-link .ui-dialog-title {
+        box-sizing: border-box;
+        padding-right: 24px;
+    }
 }
 
 // Centered content in dialog
